# py-data-viewer

./: .gitignore  README.md  pyproject.toml  readme  sample.md
.github/workflows/: workflow.yml
src/data_viewer/: __init__.py
src/py_data_viewer/: __init__.py  file_output.py  py_data_viewer.py  shared.py  types.py
tests/: complex_vprint_test.py  dict_vprint_test.py  list_vprint_test.py  obj_vprint_test.py  service.py  service_vprint.py  test_data_viewer.py  test_py_data_viewer.py
