[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "py-data-viewer"
version = "0.0.7"
authors = ["Matt Lucero <matt_lucero@outlook.com>"]
description = "A python library to display data structure values for easier navigation and exploration."
keywords = [
    "python",
    "data",
    "viewer",
    "debugging",
    "exploration",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
license = "MIT"
license-files = ["LICENSE"]

[tool.poetry.urls]
Homepage = "https://github.com/Attention-Mechanism/py-data-viewer"
Repository = "https://github.com/Attention-Mechanism/py-data-viewer"

[tool.poetry.extras]
dev = [
    "ruff",
    "pytest",
    "black",
]

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
ignore = []

[tool.ruff.isort]
known-first-party = ["py_data_viewer"]

[tool.black]
line-length = 100
skip-string-normalization = false
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.poetry.dependencies]
python = "^3.8"
poetry-core = ">=1.0.0,<2.0.0"
